--- a/index.html
+++ b/index.html
@@ -471,7 +471,94 @@
             </li>
           </ul>
         </div>
+        <div></div>
+      </div>
+      <p class="footer-paragraph-subscribe">Subscribe</p>
+      <div class="subscribe-cont">
+        <form>
+          <label for=""><input type="text" id="" /></label>
+
+          <button class="subscribe-btn" type="submit">
+            <svg>
+              <use></use>
+            </svg>
+          </button>
+        </form>
       </div>
     </footer>
+
+    <!-- Modal -->
+    <div class="backdrop">
+      <div class="modal">
+        <button class="button close-btn">
+          <svg class="close-svg" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-text">Leave your contacts and we will call you back</p>
+        <form>
+          <div class="form-wrapper-cont">
+            <label class="modal-form-label" for="user-name">Name</label>
+            <div class="modal-cont">
+              <input class="modal-input" type="text" id="user-name" required />
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="form-wrapper-cont">
+            <label class="modal-form-label" for="user-tel">Phone</label>
+            <div class="modal-cont">
+              <input class="modal-input" type="tel" id="user-tel" required />
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="form-wrapper-cont">
+            <label class="modal-form-label" for="user-email">Email</label>
+            <div class="modal-cont">
+              <input
+                class="modal-input"
+                type="email"
+                id="user-email"
+                required
+              />
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-wrapper-cont-coment">
+            <label class="modal-form-label-coment" for="coment">Comment</label>
+            <textarea
+              class="modal-textarea"
+              id="coment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+
+          <div class="modal-con-checkbox">
+            <input
+              class="input-checkbox visually-hidden"
+              type="checkbox"
+              id="user-checkbox"
+            />
+            <label for="user-checkbox" class="label-checkbox"
+              ><span class="custom-checkbox">
+                <svg class="icon-vector" width="10" height="8">
+                  <use href="./images/icons.svg#icon-vector"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="modal-span" href="#">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="send-btn" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
