--- a/index.html
+++ b/index.html
@@ -544,9 +544,7 @@
             </div>
           </div>
           <div class="form-wrapper-cont-coment">
-            <label class="modal-form-label-coment" for="user-comment"
-              >Comment</label
-            >
+            <label class="modal-form-label" for="user-comment">Comment</label>
             <textarea
               class="modal-textarea"
               id="user-comment"
