--- a/index.html
+++ b/index.html
@@ -476,11 +476,11 @@
       <div class="main-subscribe-cont">
         <p class="footer-paragraph-subscribe">Subscribe</p>
         <form class="form-footer">
-          <label class="form-footer-label" for=""
+          <label class="form-footer-label" for="subscribe"
             ><input
               class="form-footer-input"
               type="email"
-              id=""
+              id="subscribe"
               name="e-mail"
               placeholder="E-mail"
           /></label>
